# rust-rabbitmq

./: Cargo.toml
src/: consumer.rs  producer.rs
